# CLIF-epi-of-sedation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_all.sh  run_project.bat  run_project.sh
archive/: 01_cohort_id.ipynb  01_cohort_id.py  03_fed_analysis.ipynb  cal_houly_dose.ipynb  meta_analysis_archive.ipynb  sbt.sql  sedation_sbt.py  sofa.py
archive/utils_legacy/: data_cleaner.py  pyCLIF.py
code/: 01_cohort.py  01_cohort_id.ipynb  02_exposure.py  03_outcomes.py  04_covariates.py  05_analytical_dataset.py  05_modeling_dataset.py  06_table1.py  07_analysis.py  07_descriptive.py  08_models.py  08b_models_cascade.py  09_report.py  _datetime_utils.py  _logging_setup.py  _outlier_handler.py  _sofa.py  _table1_schema.py  _utils.py  cohort_id.sql  cont_sed_dose_by_hr.sql  meta_analysis.ipynb  sbt.sql  sed_dose_by_hr.sql  sedation_sbt.ipynb  sedation_sbt.py
code/agg/: _binom_helpers.py  _forest_helpers.py  _shared.py  _table1_helpers.py  cross_site_cohort_stats.py  dose_pattern_6group_count_by_icu_day_cross_site.py  dose_pattern_summary_panels_cross_site.py  forest_daytime_cross_site.py  forest_night_day_cross_site.py  forest_sbt_sensitivity_cross_site.py  los_histogram_cross_site.py  marginal_effects_rcs_cross_site.py  meta_analysis_cross_site.py  night_day_diff_mean_cross_site.py  pool_table1.py  (+1 more)
config/: README.md  config_template.json  outlier_config.yaml  outliers.json
dev/: parameterization_ablation.py
docs/: analysis_plan.md  code_audit.md
tests/: test_outlier_handler.py  test_timezone.py
utils/: sofa_score.py
(+38 files in other folders)
