[project]
name = "clif-epi-of-sedation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clifpy>=0.3.1",
    "duckdb>=1.4.1",
    "ipykernel>=6.30.0",
    "pandas>=2.3.1",
    "polars>=1.34.0",
    "statsmodels>=0.14.5",
    "tableone>=0.9.5",
]
